--- a/day-7task2.html
+++ b/day-7task2.html
@@ -74,7 +74,7 @@
                 grid-template-columns: auto auto;
              }
         }
-        @media only screen and(width560){
+        @media only screen and(width>560px){
             .container{
                 grid-template-columns: auto;
             }
